<resources>
    <!-- App text configuration -->
    <string name="app_name">Netsa Hiwot App</string>

    <!--  App About Information -->
    <string name="app_version">Version 1.0.0</string>


    <!-- play store application in more apps -->
    <string name="more_apps"> </string>


    <string name="share_btn">Share this</string>
    <string name="share">Share</string>

    <string name="date">Set Date</string>
    <string name="time">Set Time</string>

    <string name="desc_list_item_icon">Item Icon</string>

    <string name="menu_settings">Settings</string>
    <string name="app_info">App Info</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_home">Home</string>
    <string name="more">More Apps</string>
    <string name="rate">Rate Apps</string>
    <string-array name="main_menu_list">
        <item>List Menu</item>

    </string-array>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <string name="menu_testimonies">Testimonies</string>
    <string name="menu_test">Addiction Test</string>
    <string name="menu_tempted">Tempted</string>
    <string name="menu_help">Get Help</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="first_name">First_name</string>
    <string name="last_name">Last_name</string>
    <string name="sex">Sex</string>
    <string name="email">Email</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="message">Email</string>
    <string name="Sex">Sex</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="age_range">Age Range :</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Testimonies</item>
        <item>Addiction Test</item>
        <item>Tempted</item>
        <item>Get Help</item>
        <item>Contact Us</item>
        <item>About Us</item>
        <item>Share</item>

    </string-array>

    <!-- Nav Drawer List Item Icons, keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_testimonies</item>
        <item>@drawable/ic_addiction_test</item>
        <item>@drawable/ic_tempted</item>
        <item>@drawable/ic_get_help</item>
        <item>@drawable/ic_about</item>
        <item>@drawable/ic_contact_us</item>
        <item>@drawable/ic_share</item>
    </array>

	<string name="contact">
      We are here to answer any question or comment you may have about our app or our ministry.
        Reach out to us and we will respond as soon as we can.
    </string>
     <string name="Amanstext1">      One is staggered at the unwillingness of Christians to pray. Perhaps it is because they have never
experienced, or even heard of, convincing answers to prayer.
In this chapter we are setting out to do the “impossible.” What is that? We long to bring home to
the heart and conscience of every reader the power of prayer. We venture to describe this as
“impossible.” For if men will not believe, and act upon, our Lord’s promises and commands, how
can we expect them to be persuaded by any mere human exhortations?
But do you remember that our Lord, when speaking to His disciples, asked them to believe that He
was in the Father and the Father in Him? Then he added: “If you cannot believe My bare word
about this, believe Me for the very works’ sake” (John xiv. 11). It was as if He said, “If My Person,
My sanctified life, and My wonderful words do not elicit belief in Me, then look at My works:
surely they are sufficient to compel belief? Believe Me because of what I do.The Holy Spirit seemed to say to her, “Pray more.” But she resisted the promptings of the Spirit
for some time. “At length,” said she, “I set apart much of my time for prayer. I did it in fear and
trembling lest my fellow-workers should complain that I was shirking my work. After a few weeks
I began to see men and women accepting Christ as their Savior. Moreover, the whole district was
soon awakened, and the work of all the other missionaries was blessed as never before. God did
more in six months than I had succeeded in doing in six years. And,” she added, “no one ever
accused me of shirking my duty.” Another lady missionary in India felt the same call to pray. She
began to give much time to prayer. No opposition came from without, but it did come from within.
But she persisted, and in two years the baptized converts increased sixfold!
God promised that He would “pour out the Spirit of grace and supplication upon all flesh” (Joel ii.
28). How much of that Spirit of “supplication” is o Surely we must get that Spirit at all costs?
Yet if we are not willing to spend time in “supplication,” God must perforce withhold His Spirit

    </string>
        <string name="Amanstext2">
Then He went on to promise that if they would believe, they should do greater works than these.
It was after this utterance that He gave the first of those six wonderful promises in regard to prayer.
The inference surely is that those “greater works” are to be done only as the outcome of prayer.
May the disciple therefore follow the Master’s method? Fellow-worker, if you fail to grasp, fail to
trust our Lord’s astounding promises regarding prayer, will you not believe them “for the very works’ --
What are we “out for”? What is our real aim in life? Surely we desire most of all to be abundantly
fruitful in the Master’s service. We seek not position, or prominence, or power. But we do long to
be fruitful servants. Then we must be much in prayer. God can do more through our prayers than
through our preaching. A. J. Gordon once said, “You can do more than pray, after you have prayed,
but you can never do more than pray until you have prayed.” If only we would believe this!
A lady in India was cast down through the failure of her life and work. She was a devoted missionary,
but somehow or other conversions never resulted from her ministry.The Holy Spirit seemed to say to her,
            “Pray more.” But she resisted the promptings of the Spirit
for some time. “At length,” said she, “I set apart much of my time for prayer. I did it in fear and
trembling lest my fellow-workers should complain that I was shirking my work. After a few weeks
I began to see men and women accepting Christ as their Savior. Moreover, the whole district was
soon awakened, and the work of all the other missionaries was blessed as never before. God did
more in six months than I had succeeded in doing in six years. And,” she added, “no one ever
accused me of shirking my duty.” Another lady missionary in India felt the same call to pray. She
began to give much time to prayer. No opposition came from without, but it did come from within.
But she persisted, and in two years the baptized converts increased sixfold!
God promised that He would “pour out the Spirit of grace and supplication upon all flesh” (Joel ii.
28). How much of that Spirit of “supplication” is o Surely we must get that Spirit at all costs?
Yet if we are not willing to spend time in “supplication,” God must perforce withhold His Spirit

            </string>
        <string name="Amanstext3">
The Holy Spirit seemed to say to her, “Pray more.” But she resisted the promptings of the Spirit
for some time. “At length,” said she, “I set apart much of my time for prayer. I did it in fear and
trembling lest my fellow-workers should complain that I was shirking my work. After a few weeks
I began to see men and women accepting Christ as their Savior. Moreover, the whole district was
soon awakened, and the work of all the other missionaries was blessed as never before. God did
more in six months than I had succeeded in doing in six years. And,” she added, “no one ever
accused me of shirking my duty.” Another lady missionary in India felt the same call to pray. She
began to give much time to prayer. No opposition came from without, but it did come from within.
But she persisted, and in two years the baptized converts increased sixfold!
God promised that He would “pour out the Spirit of grace and supplication upon all flesh” (Joel ii.
28). How much of that Spirit of “supplication” is o Surely we must get that Spirit at all costs?
Yet if we are not willing to spend time in “supplication,” God must perforce withhold His Spirit
 The Holy Spirit seemed to say to her, “Pray more.” But she resisted the promptings of the Spirit
for some time. “At length,” said she, “I set apart much of my time for prayer. I did it in fear and
trembling lest my fellow-workers should complain that I was shirking my work. After a few weeks
I began to see men and women accepting Christ as their Savior. Moreover, the whole district was
soon awakened, and the work of all the other missionaries was blessed as never before. God did
more in six months than I had succeeded in doing in six years. And,” she added, “no one ever
accused me of shirking my duty.” Another lady missionary in India felt the same call to pray. She
began to give much time to prayer. No opposition came from without, but it did come from within.
But she persisted, and in two years the baptized converts increased sixfold!
God promised that He would “pour out the Spirit of grace and supplication upon all flesh” (Joel ii.
28). How much of that Spirit of “supplication” is o Surely we must get that Spirit at all costs?
Yet if we are not willing to spend time in “supplication,” God must perforce withhold His Spirit
           </string>
    <string name="About">
        ነፃ ህይወት ሞባይል አፕሊኬሽን የተዘጋጀው በግሬት ኮሚሽን ሲሆን አፕሊኬሽኑ በፖርኖግራፊ እና በፖርኖግራፊ መዘዞች ዙሪያ መረጃን
        በመስጠት ከማህበራዊ ህይወት፣ ከግል ህይወት እይታዎች አንፃር የሚያስከትለው ጉዳት በቂ መረጃዎችን ይሰጣል፡፡ በተጨማሪ በፖርኖግራፊ
        ልምምድ ውስጥ ለሚገኙ እና ከልምምዱ መላቀቅ ለሚፈልጉ ሰዎች online ምዝገባ በማድረግ ከልምምዱ ነፃ የሆነ ህይወት እንዲኖራቸው ይረዳል::For more information
        click the links below.
    </string>

</resources>