<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/first_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ff6600"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:width="300dp"

                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstname"
                android:layout_marginTop="15dp"
                android:text="@string/last_name"
                android:textColor="#ff6600"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/secondname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="300dp"

                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:width="80dp"
                    android:text="@string/sex"
                    android:textColor="#ff6600"
                    android:textSize="17sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/M"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/F"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/female" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    android:text="@string/age_range"
                    android:textColor="#ff6600"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:gravity="center"
                    android:tag="Select Age"
                    android:spinnerMode="dropdown">

                </Spinner>

            </LinearLayout>


            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="#ff6600"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:width="300dp"

                android:hint="example@example.com"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/Problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:width="300dp"
                android:text="Write Your Situation below"
                android:textColor="#ff6600"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/situation"
                android:layout_width="280dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/boarder"

                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxHeight="100dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:layout_marginTop="20dp"
                android:width="400dp"
                android:background="#ff6600"
                android:text="Send Email" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
